changfe in index

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-6 jcc d-flex f-c">
+                <div class="col-6 jcc box d-flex f-c ">
                     <div class="svg">
                         <svg width="94" height="8" viewBox="0 0 94 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect y="0.353027" width="94" height="7" fill="#FC724D" />
                         </svg>
 
                     </div>
-                    <h1 class="mt-35 mb-35">Our Department</h1>
-                    <p>Problems trying to resolve the conflict between <br>
+                    <h1 class="mt-35 mb-35 head-1">Our Department</h1>
+                    <p class="para-3">Problems trying to resolve the conflict between <br>
                         the two major realms of Classical physics: <br>
                         Newtonian mechanics </p>
-                    <a class="align-item-center mt-35 d-flex" href="#">Learn More
+                    <a class="align-item-center mt-35 d-flex lm gap " href="#">Learn More
                         <svg width="9" height="17" viewBox="0 0 9 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_49789_3024)">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -36,7 +36,6 @@
                                 </clipPath>
                             </defs>
                         </svg>
-
                     </a>
                 </div>
                 <div class="col-6">
@@ -75,12 +74,12 @@
                                     </svg>
 
                                 </div>
-                                <div class="para">Cancer Care</div>
+                                <div class="para-1">Cancer Care</div>
                                 <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <rect y="0.353027" width="50" height="2" fill="#E74040" />
                                 </svg>
-                                <div class="para">The gradual <br>
+                                <div class="para-2">The gradual <br>
                                     accumulation of <br>
                                     information about </div>
                             </div>
@@ -166,12 +165,12 @@
 
 
                                 </div>
-                                <div class="para">Online Appoinment</div>
+                                <div class="para-1">Online Appoinment</div>
                                 <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <rect y="0.353027" width="50" height="2" fill="#E74040" />
                                 </svg>
-                                <div class="para">The gradual <br>
+                                <div class="para-2">The gradual <br>
                                     accumulation of <br>
                                     information about </div>
                             </div>
@@ -208,12 +207,12 @@
                                             </defs>
                                         </svg>
                                     </div>
-                                    <div class="para">Book now</div>
+                                    <div class="para-1">Book now</div>
                                     <svg width="50" height="3" viewBox="0 0 50 3" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <rect y="0.353027" width="50" height="2" fill="#E74040" />
                                     </svg>
-                                    <div class="para">The gradual <br>
+                                    <div class="para-2">The gradual <br>
                                         accumulation of <br>
                                         information about </div>
                                 </div>
